--- a/spices/cix-util-linux.org
+++ b/spices/cix-util-linux.org
@@ -1,6 +1,6 @@
 # File           : cix-util-linux.org
 # Created        : <2016-10-14 Wed 23:08:36 GMT>
-# Last Modified  : <2016-11-23 Wed 08:00:40 GMT> sharlatan
+# Last Modified  : <2016-12-13 Tue 23:58:12 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -11,20 +11,46 @@
 #+TITLE: Util Linux
 /it is a standard package of the Linux operating system./
 
-|-------------+--------------------------------------------------|
-| *Author*      | Karel Zak                                        |
-| *Maintainers* | Ruediger Meier, Sami Kerola, Stanislav Brabec    |
-|             | Filipe Brandenburger, Igor Gnatenko              |
-|             | J William Piggott, Lada Trimasova, Wayne R. Roth |
-|             | Werner Fink, Yuriy M. Kaminskiy                  |
-| *Realised*    | 2007                                             |
-| *Source*      | [[https://git.kernel.org/cgit/utils/util-linux/util-linux.git/][gutil-linux]]                                      |
-| *Info*        |                                                  |
-|-------------+--------------------------------------------------|
+|--------------+--------------------------------------------------|
+| *Author*       | Karel Zak                                        |
+| *Contributors* | Ruediger Meier, Sami Kerola, Stanislav Brabec    |
+|              | Filipe Brandenburger, Igor Gnatenko              |
+|              | J William Piggott, Lada Trimasova, Wayne R. Roth |
+|              | Werner Fink, Yuriy M. Kaminskiy                  |
+| *Realised*     | 2007                                             |
+| *Source*       | [[https://git.kernel.org/cgit/utils/util-linux/util-linux.git/][util-linux.git]]                                   |
+| *Info*         |                                                  |
+|--------------+--------------------------------------------------|
 
 The util-linux package contains a large variety of low-level system utilities
 that are necessary for a Linux system to function. Among others, Util-linux
 contains the fdisk configuration tool and the login program.
+
+** Libraries
+|  № | Name | Released | RPM             | DEB | BSD |
+|----+------+----------+-----------------+-----+-----|
+|  1 |      |          | ld-linux-x86-64 |     |     |
+|  2 |      |          | libaudit        |     |     |
+|  3 |      |          | libblkid        |     |     |
+|  4 |      |          | libcap-ng       |     |     |
+|  5 |      |          | libcrypt        |     |     |
+|  6 |      |          | libc            |     |     |
+|  7 |      |          | libfdisk        |     |     |
+|  8 |      |          | libmount        |     |     |
+|  9 |      |          | libm            |     |     |
+| 10 |      |          | libncursesw     |     |     |
+| 11 |      |          | libpam_misc     |     |     |
+| 12 |      |          | libpam          |     |     |
+| 13 |      |          | librt           |     |     |
+| 14 |      |          | libselinux      |     |     |
+| 15 |      |          | libsmartcols    |     |     |
+| 16 |      |          | libsystemd      |     |     |
+| 17 |      |          | libtinfo        |     |     |
+| 18 |      |          | libudev         |     |     |
+| 19 |      |          | libutempter     |     |     |
+| 20 |      |          | libutil         |     |     |
+| 21 |      |          | libuuid         |     |     |
+| 22 |      |          | libz            |     |     |
 ------
 
 * Index
@@ -634,6 +660,7 @@ A *mount* command existed in Version 5 AT&T UNIX
 *** rev::examples
 *** rev::files
 *** rev::see-also
+    [[file:./cix-gnu-core-utilities.org::*tac][tac (1)]]
 ** rtcwake                                                                      :cmd:
 [[Index][⬆]]
 *** rtcwake::options
