--- a/spices/cix-gnu-binutils.org
+++ b/spices/cix-gnu-binutils.org
@@ -1,6 +1,6 @@
 # File           : cix-gnu-binutils.org
 # Created        : <2015-11-02 Mon 22:18:23 GMT>
-# Last Modified  : <2016-11-07 Mon 22:42:02 GMT> sharlatan
+# Last Modified  : <2016-12-14 Wed 22:14:29 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -10,7 +10,7 @@
 [[file:../README.org*Index][|≣|]]
 #+TITLE: GNU Bin Utils
 
-** Index
+* Index
 
 #+BEGIN_EXAMPLE
     addr2line (1) - convert addresses into file names and line numbers.
@@ -33,4 +33,127 @@
     strip (1)     - Discard symbols from object files.
     strip (1p)    - remove unnecessary information from strippable files (DEVELOPMENT)
 #+END_EXAMPLE
+
+* Receipts
+** addr2line                                                                    :cmd:
+[[Index][⬆]]
+*** addr2line::options
+*** addr2line::examples
+*** addr2line::files
+*** addr2line::see-also
+** ar                                                                           :cmd:
+[[Index][⬆]]
+*** ar::options
+*** ar::examples
+*** ar::files
+*** ar::see-also
+** as                                                                           :cmd:
+[[Index][⬆]]
+*** as::options
+*** as::examples
+*** as::files
+*** as::see-also
+** c++filt                                                                      :cmd:
+[[Index][⬆]]
+*** c++filt::options
+*** c++filt::examples
+*** c++filt::files
+*** c++filt::see-also
+** elfedit                                                                      :cmd:
+[[Index][⬆]]
+*** elfedit::options
+*** elfedit::examples
+*** elfedit::files
+*** elfedit::see-also
+** gprof                                                                        :cmd:
+[[Index][⬆]]
+*** gprof::options
+*** gprof::examples
+*** gprof::files
+*** gprof::see-also
+** ld                                                                           :cmd:
+[[Index][⬆]]
+*** ld::options
+*** ld::examples
+*** ld::files
+*** ld::see-also
+** nm                                                                           :cmd:
+[[Index][⬆]]
+*** nm::options
+*** nm::examples
+*** nm::files
+*** nm::see-also
+** objcopy                                                                      :cmd:
+[[Index][⬆]]
+*** objcopy::options
+*** objcopy::examples
+*** objcopy::files
+*** objcopy::see-also
+** objdump                                                                      :cmd:
+[[Index][⬆]] /display information from object files/
+*** objdump::options
+*** objdump::examples
+**** objdump-161214215154
+list required libraries for a package:
+#+BEGIN_SRC sh
+  #!/usr/bin/env bash
+
+  PKG="util-linux"
+
+  # For dpkg based
+  if command -v dpkg-query >/dev/null 2>&1; then
+      for cmd in $(dpkg-query -L "$PKG" | grep "bin/"); do
+          objdump -p "$cmd" | grep "NEEDED"
+      done \
+          | awk '{print $2}' | sort -u | sed 's/\..*$//g'
+
+  elif command -v rpm >/dev/null 2>&1; then
+      for cmd in $(rpm -ql "$PKG" | grep "bin/"); do
+          objdump -p "$cmd" | grep "NEEDED"
+      done \
+          | awk '{print $2}' | sort -u | sed 's/\..*$//g'
+  fi
+#+END_SRC
+[[file:./cix-gnu-bash-builtin.org::*if][if]]
+[[file:./cix-gnu-bash-builtin.org::*for][for]]
+[[file:./cix-gnu-bash-builtin.org::*command][command]]
+[[file:./cix-gawk.org::*awk][awk]]
+[[file:./cix-gnu-core-utilities.org::*sort][sort]]
+[[file:./cix-sed.org::*sed][sed]]
+[[file:./cix-gnu-grep.org::*grep][grep]]
+*** objdump::files
+*** objdump::see-also
+[[file:./cix-gnu-binutils.org::*nm][nm]]
+[[file:./cix-gnu-binutils.org::*readelf][readelf]]
+** ranlib                                                                       :cmd:
+[[Index][⬆]]
+*** ranlib::options
+*** ranlib::examples
+*** ranlib::files
+*** ranlib::see-also
+** readelf                                                                      :cmd:
+[[Index][⬆]]
+*** readelf::options
+*** readelf::examples
+*** readelf::files
+*** readelf::see-also
+** size                                                                         :cmd:
+[[Index][⬆]]
+*** size::options
+*** size::examples
+*** size::files
+*** size::see-also
+** strings                                                                      :cmd:
+[[Index][⬆]]
+*** strings::options
+*** strings::examples
+*** strings::files
+*** strings::see-also
+** strip                                                                        :cmd:
+[[Index][⬆]]
+*** strip::options
+*** strip::examples
+*** strip::files
+*** strip::see-also
+
 
