--- a/cix-main.org
+++ b/cix-main.org
@@ -1,6 +1,6 @@
 # File          : cix-main.org
 # Created       : Sat 07 Nov 2015 22:58:38
-# Last Modified : <2016-11-28 Mon 23:51:03 GMT> sharlatan
+# Last Modified : <2016-12-11 Sun 23:04:03 GMT> sharlatan
 # Maintainer    : sharlatan <sharlatanus@gmail.com>
 # Short         :
 
@@ -8,7 +8,7 @@
 #+OPTIONS: toc:nil
 
 #+TITLE: CIX
-/Collectlion of unIX utilities tips/
+/Comprehensive Inspiration of uniX/
 
 * Intro
 
@@ -21,18 +21,18 @@ Man pages common sections.
 |---------+-------+---------+-----+-------+-----+------------------------------------|
 |       0 |       |         |     |       |     | Header f                           |
 |      0p |       |         |     |       |     | Header f (POSIX)                   |
-|       1 |     1 |       1 |     |     1 |   1 | General cmm                        |
-|      1p |       |         |     |       |     | General cmm (POSIX)                |
-|       2 |     2 |       2 |     |     2 |   2 | Systems calls                      |
+|       1 |     1 |       1 |   1 |     1 |   1 | General cmd                        |
+|      1p |       |         |     |       |     | General cmd (POSIX)                |
+|       2 |     2 |       2 |   2 |     2 |   2 | Systems calls                      |
 |       3 |     3 |       3 |     |     3 |   3 | C lib fun                          |
 |      3n |       |         |     |       |     | Network fun                        |
 |      3p |       |         |     |       |     | Perl mod                           |
-|       4 |     4 |       7 |     |     7 |   4 | Special f                          |
-|       5 |     5 |       4 |     |     4 |   5 | F formats and conventions          |
-|       6 |     6 |       6 |     |     - |   6 | Games and Screen savers            |
+|       4 |     4 |       7 |   4 |     7 |   4 | Special file                       |
+|       5 |     5 |       4 |   5 |     4 |   5 | File formats                       |
+|       6 |     6 |       6 |   6 |     - |   6 | Games                              |
 |       7 |     7 |       5 |     |     5 |   7 | misc                               |
-|       8 |     8 |      1m |     |    1m |   8 | Sys cmd, only root cmd             |
-|       9 |     9 |       9 |     |     - |   - | Oscure kernel specs and interfaces |
+|       8 |     8 |      1m |   8 |    1m |   8 | Maintaince cmd                     |
+|       9 |     9 |       9 |   9 |     - |   - | Oscure kernel specs and interfaces |
 |       l |       |         |     |       |     | Local documentation                |
 |       n |       |         |     |       |     | New manpages                       |
 |         |     - |       - |     |     9 |   - | HP-UX general information          |
@@ -78,10 +78,11 @@ on *GNU/Linux*
 
 - *Core* /Usually it contains on the most distributions/
   + [[./spices/cix-busybox.org][busybox]] :: The Swiss Army Knife of Embedded Linux
-  + [[./spices/cix-gnu-core-utilities.org][gnu-core-utilities]] :: basic file, shell and text manipulation utilities
-  + [[./spices/cix-man-db.org][man-db]] :: Tools for searching and reading man pages
-  + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system
+  + [[./spices/cix-gnu-core-utilities.org][gnu-core-utilities]] :: basic file, shell and text manipulation utilities: *Linux FreeBSD*
+  + [[./spices/cix-man-db.org][man-db]] :: Tools for searching and reading man pages: *Linux*
+  + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system: *Linux*
   + The Heirloom Project :: traditional implementations of standard UNIX utils
+  + BSD :: List of common BSD commands
 
 - *File* /Everything is a file/!
   + [[file:./spices/cix-diffutils.org][diffutils]] :: A GNU collection of diff utilities
@@ -92,7 +93,7 @@ on *GNU/Linux*
   + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor
   + [[./spices/cix-nano.org][nano]] :: A small text editor
   + [[./spices/cix-sed.org][sed]] :: A GNU stream text editor
-  + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim
+  + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim: *FreeBSD Linux OS-X*
 
 - *Transfare-sync* /Put me up, put me down/
   + lsyncd :: File change monitoring and synchronization daemon
@@ -143,23 +144,26 @@ on *GNU/Linux*
   + [[./spices/cix-cpio.org][cpio]] :: A GNU archiving program
   + [[./spices/cix-gnu-tar.org][gnu-tar]] :: A GNU file archiving program
   + [[./spices/cix-gzip.org][gzip]] :: The GNU data compression program
+  + [[./spices/cix-unizp.org][unzip]] :: A utility for unpacking zip files
   + [[./spices/cix-lrzip.org][lrzip]] :: Compression program optimized for large files
   + [[./spices/cix-pax.org][pax]] :: POSIX File System Archiver
-  + [[./spices/cix-xz.org][xz]] :: LZMA compression utilities
+  + [[./spices/cix-xz.org][xz]] :: LZMA compression utilities: *Linux FreeBSD*
 
 - *Networking* /We all live in the someone's subnet in/
   + [[./spices/cix-bind-utils.org][bind-utils]] :: utilities for querying DNS name server
   + [[./spices/cix-bridge_utils.org][bridge-utils]] :: Utilities for configuring the linux ethernet bridge
-  + [[file:./cix-curl.org][curl]] :: A utility for getting files from remote servers
-  + [[./spices/cix-gnu-inetutils.org][gnu-inetutils]] :: A collection of common network programs
+  + [[file:./cix-curl.org][curl]] :: A utility for getting files from remote servers: *Linux FreeBSD*
+  + [[./spices/cix-gnu-inetutils.org][gnu-inetutils]] :: a collection of common network programs
   + [[./spices/cix-iproute2.org][iproute2]] :: routing commands and utilities
-  + [[./spices/cix-iptables.org][iptables]] :: Linux kernel packet filtering capabilities
-  + [[./spices/cix-iputils.org][iputils]] :: Network monitoring tools including ping
+  + [[./spices/cix-iptables.org][iptables]] :: Linux kernel packet filtering capabilities: *Linux*
+  + [[./spices/cix-iputils.org][iputils]] :: network monitoring tools including ping
   + [[./spices/cix-net-snmp.org][net-snmp]] :: A collection of SNMP protocol tools and libraries
   + [[./spices/cix-net-tools.org][net-tools]] :: collection of base networking utilities
   + [[./spices/cix-nmap.org][nmap]] :: Network exploration tool and security scanner
-  + [[./spices/cix-openssh.org][OpenSSH]] :: An open source implementation of SSH protocol versions 1 and 2
-  + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network
+  + [[./spices/cix-openssh.org][OpenSSH]] :: An open source implementation of SSH protocol:
+  *AIX HP-UX Irix Linux NeXT SCO SNI/Reliant Unix Solaris Digital Unix/Tru64/OSF
+  Mac OS-X Cygwin*
+  + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network: *Linux FreeBSD*
 
 - *Shell* /Not just sand.../
   + [[./spices/cix-gnu-bash-builtin.org][gnu-bash-builtin]] :: GNU Bash shell built in commands
