--- a/spices/cix-gnu-core-utilities.org
+++ b/spices/cix-gnu-core-utilities.org
@@ -1,26 +1,25 @@
 # File          : gnu-core-utilities.md
 # Created       : Wed 14 Oct 2015 23:07:41
-# Last Modified : <2016-12-01 Thu 22:46:03 GMT> sharlatan
+# Last Modified : <2016-12-21 Wed 22:20:35 GMT> sharlatan
 # Maintainer    : sharlatan
 
 #+OPTIONS: num:nil
 
-[[../README.org::*Index][|≣|]][[https://www.gnu.org/software/coreutils/coreutils.html][|↷|]]
-
+[[../cix-main.org::*Index][|≣|]]
 #+TITLE: GNU Core Utilities
 
-|-------------+---------------|
-| *Author*      |               |
-| *Maintainers* |               |
-| *Realised*    |               |
-| *Source*      | [[http://git.savannah.gnu.org/cgit/coreutils.git][coreutils.git]] |
-| *Info*        | [[http://www.gnu.org/software/coreutils/manual/coreutils.html][GNU Coreutils]] |
-|-------------+---------------|
+|--------------+---------------|
+| *Author*       |               |
+| *Contributors* |               |
+| *Realised*     |               |
+| *Source*       | [[http://git.savannah.gnu.org/cgit/coreutils.git][coreutils.git]] |
+| *Info*         | [[http://www.gnu.org/software/coreutils/manual/coreutils.html][GNU Coreutils]] |
+|--------------+---------------|
 
-The GNU Core Utilities are the basic file, shell and text manipulation
-utilities of the  GNU operating system.  These are  the core utilities
-which are expected  to exist on every operating  system.  This package
-is the union of the GNU fileutils, sh-utils, and textutils packages.
+The GNU Core Utilities are the basic file, shell and text manipulation utilities
+of the GNU operating system.  These are the core utilities which are expected to
+exist  on  every  operating system.   This  package  is  the  union of  the  GNU
+fileutils, sh-utils, and textutils packages.
 -----
 
 * Index
@@ -267,27 +266,27 @@ create a *C* chars by *L* lines file of a random ASCII characters:
 
 *** dd::options
 
-|--------------+---|
-| bs=BYTES     |   |
-| cbs=BYTES    |   |
-| conv=CONVS   |   |
-| count=N      |   |
-| ibs=BYTES    |   |
-| if=FILE      |   |
-| iflag=FLAGS  |   |
-| obs=BYTES    |   |
-| of=FILE      |   |
-| oflag=FLAGS  |   |
-| seek=N       |   |
-| skip=N       |   |
-| status=LEVEL |   |
-|--------------+---|
+|--------------+-------------------|
+| bs=BYTES     | c w b K MB M GB G |
+| cbs=BYTES    |                   |
+| conv=CONVS   |                   |
+| count=N      |                   |
+| ibs=BYTES    |                   |
+| if=FILE      |                   |
+| iflag=FLAGS  |                   |
+| obs=BYTES    |                   |
+| of=FILE      |                   |
+| oflag=FLAGS  |                   |
+| seek=N       |                   |
+| skip=N       |                   |
+| status=LEVEL |                   |
+|--------------+-------------------|
 
 *** dd::examples
 **** dd-161124233800
 output your microphone to a remote computer's speaker:
 :    ~$ dd if=/dev/dsp | ssh -c arcfour -C username@host dd of=/dev/dsp
-  [[file:./cix-openssh.org::*ssh][ssh (1)]]
+[[file:./cix-openssh.org::*ssh][ssh (1)]]
 
 **** dd-161124225351                                                            :destruct:damage:erase:
 killing features of *dd* (*,..,*):
@@ -295,8 +294,14 @@ killing features of *dd* (*,..,*):
 :    ~# dd if=/dev/random of=/dev/port #  freeze the system
 
 **** dd-161116230224                                                            :io:test:memory:
-memory I/O speed test:
+memory I/O speed test with 34G of data:
 :    ~$ time dd if=/dev/zero of=/dev/null bs=1M count=32768
+
+**** dd-161221215259                                                            :hdd:backup:
+make an image of and device and send it via ssh (or receive it):
+:    ~$ dd if=/dev/sda | gzip -1 - | ssh user@local dd of=img.gz     # from remote
+:    ~$ ssh user@remote "dd if=/dev/sda | gzip -1 -" | dd of=img.zip # from local
+[[file::*gzip][gzip (1)]] [[file:./cix-openssh.org::*ssh][ssh (1)]]
 
 **** dd-161113185213                                                            :lan_speed:test:
 test NFS, LAN and I/O speed:
@@ -310,7 +315,7 @@ test NFS, LAN and I/O speed:
   echo "Read speed"
   time dd if="$NFS_PATH"/test_file of=/dev/null bs=16k
 #+END_SRC
-[[./cix-gnu-bash-builtin.org::echo][echo]]
+[[./cix-gnu-bash-builtin.org::echo][echo]] [[file::*time][time (1)]]
 
 **** dd-161113185234
 copy and restore MBR of block device (HDD/SSD):
@@ -354,23 +359,23 @@ stress test of BLOCK device with random size files to a random sector number:
       rm "$MNT_PATH"/file_name
   done
 #+END_SRC
-[[./cix-gnu-core-utilities.org::*shuf][shuf (1)]], [[file:./cix-gnu-core-utilities.org::*rm][rm (1)]], [[./cix-gnu-core-utilities.org::*cat][cat (1)]], [[./cix-gnu-bash-builtin.org::*while][while]]
+[[./cix-gnu-core-utilities.org::*shuf][shuf (1)]] [[file:./cix-gnu-core-utilities.org::*rm][rm (1)]] [[./cix-gnu-core-utilities.org::*cat][cat (1)]] [[./cix-gnu-bash-builtin.org::*while][while]]
 
 **** dd-161115233028                                                            :copy:clone:backup:hdd:
 duplicate several drives concurrently:
 #+BEGIN_SRC sh
-    #!/usr/bin/env bash
+  #!/usr/bin/env bash
 
-    DEV_1="/dev/sda"
-    DEV_2="/dev/sdb"
-    DEV_3="/dev/sdc"
-    DEV_4="/dev/sdd"
+  DEV_1="/dev/sda"
+  DEV_2="/dev/sdb"
+  DEV_3="/dev/sdc"
+  DEV_4="/dev/sdd"
 
-    # Add as many as needed afte tee command
-    dd if="$DEV_1" bs=64k \
-  | tee >(dd of="$DEV_2" bs=64k) \
-              >(dd of="$DEV_3" bs=64k) \
-  | dd of="$DEV_4" bs=64k
+  # Add as many as needed afte tee command
+  dd if="$DEV_1" bs=64k \
+      | tee >(dd of="$DEV_2" bs=64k) \
+            >(dd of="$DEV_3" bs=64k) \
+      | dd of="$DEV_4" bs=64k
 #+END_SRC
 [[file:./cix-gnu-core-utilities.org::*tee][tee (1)]]
 
@@ -897,11 +902,16 @@ remove all but specific file(s):
     [[file:./cix-util-linux.org::*rev][rev (1)]]
     tail
 ** tail                                                                         :cmd:
-[[Index][⬆]]
+[[Index][⬆]] /output the last part of file/
+/Written by Paul Rubin, David MacKenzie, Ian Lance Taylor, and Jim Meyering./
+
+A *tail* command appeared in Version 7 AT&T UNIX.
 *** tail::options
 *** tail::examples
 *** tail::files
 *** tail::see-also
+    [[file:./cix-gnu-core-utilities.org::*cat][cat (1)]] [[file:./cix-gnu-core-utilities.org::*tac][tac (1)]] [[file:./cix-gnu-core-utilities.org::*head][head (1)]] [[file:./cix-sed.org::*sed][sed (1)]]
+
 ** tee                                                                          :cmd:
 [[Index][⬆]] /read from standard input and write to standard output and files/
 /Written by Mike Parker, Richard M. Stallman, and David MacKenzie./
@@ -973,7 +983,10 @@ rename files in cwd from lower to UPPER case:
       mv "$file" $(echo "$file" | tr '[:lower:]' '[:upper:]')
   done
 #+END_SRC
-[[file:./cix-gnu-bash-builtin.org::for][for]], [[file:./cix-gnu-bash-builtin.org::*echo][echo]], [[file:./cix-gnu-core-utilities.org::*mv][mv (1)]],
+[[file:./cix-gnu-bash-builtin.org::for][for]], [[file:./cix-gnu-bash-builtin.org::*echo][echo]], [[file:./cix-gnu-core-utilities.org::*mv][mv (1)]]
+**** tr-161209233045
+remove new lines from a file:
+:    ~$ tr -d '\n' < input_file > input_file_tm && mv input_file_tm input_file
 *** tr::files
 *** tr::see-also
 ** true                                                                         :cmd:
