--- a/cix-main.org
+++ b/cix-main.org
@@ -1,6 +1,6 @@
 # File          : cix-main.org
 # Created       : Sat 07 Nov 2015 22:58:38
-# Last Modified : <2016-12-20 Tue 01:00:30 GMT> sharlatan
+# Last Modified : <2016-12-26 Mon 21:28:25 GMT> sharlatan
 # Maintainer    : sharlatan <sharlatanus@gmail.com>
 # Short         :
 
@@ -131,15 +131,16 @@ on *GNU/Linux*
   + [[./spices/cix-smartmontools.org][smartmontools]] :: Tools for monitoring SMART capable hard disks
   + [[./spices/cix-dmidecode.org][dmidecode]] :: Tool to analyse BIOS DMI data
   + [[./spices/cix-usbutils.org][usbutils]] :: Linux USB utilities
+  + [[./spices/cix-lshw.org][lshw]] :: hardware lister
 
 - *Searching* /Loosing my religion/
-  + [[./spices/cix-gnu-grep.org][gnu-grep]] :: Pattern matching utilities
+  + [[./spices/cix-gnu-grep.org][gnu-grep]] :: pattern matching utilities
   + [[./spices/cix-gnu-findutils.org][gnu-findutils]] :: The GNU versions of find utilities (find and xargs)
   + [[./spices/cix-ag.org][ag]] :: Super-fast text searching tool - Silversearcher
   + [[./spices/cix-ack.org][ack]] :: Grep-like text finder
   + [[./spices/cix-fdupes.org][fdupes]] :: Finds duplicate files in a given set of directories
 
-- *Compress-Archive* /I'm a pac man/
+- *Compress-archive* /I'm a pac man/
   + [[./spices/cix-bzip2.org][bzip2]] :: A file compression utility
   + [[./spices/cix-cpio.org][cpio]] :: A GNU archiving program
   + [[./spices/cix-gnu-tar.org][gnu-tar]] :: A GNU file archiving program
@@ -209,6 +210,7 @@ on *GNU/Linux*
   + [[./spices/cix-gpg.org][gnupg]] :: A GNU utility for secure communication and data storage
 -----
 * Glosary
+- discriptor ::
 - DMI ::
 - sticky bit ::
 - GUI ::
